Fixed issue with cards overflowing the projects container on tablet display size

--- a/_media-query.scss
+++ b/_media-query.scss
@@ -71,7 +71,7 @@
       margin-left: 100px;
       width: 100%;
       max-height: 60%;
-      font-size: 17px;
+      font-size: 1.5rem;
       h2 {
         display: flex;
         margin: 50px;
@@ -95,20 +95,23 @@
     }
 
     .projects {
+      border: 2px solid red;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 100px;
-      justify-content: space-evenly;
+      justify-items: center;
+
+      width: 90%;
     }
   }
-  .footer {
-    width: 104.5%;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    padding: 60px;
-  }
 }
+.footer {
+  width: 104.5%;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  padding: 60px;
+}
+
 @media screen and (min-width: 768px) and (max-width: 966px) {
   .nav {
     padding: 30px 5%;
@@ -128,10 +131,6 @@
       padding-right: 5%;
       gap: 30px;
     }
-
-    .projects {
-      width: 90%;
-    }
   }
 
   .footer {
@@ -144,6 +143,19 @@
   .header {
     &__img {
       height: 300px;
+    }
+  }
+  .content {
+    &__description {
+      font-size: 1.3rem;
+      .projects {
+        &__card {
+          background-color: black;
+        }
+      }
+    }
+    .projects {
+      grid-template-columns: repeat(2, 1fr);
     }
   }
 }
